# supreme-court-ml-predictions

./: .gitignore  CODEOWNERS  Makefile  README.md  final_presentation.html  final_presentation.ipynb  final_presentation.slides.html  final_report.ipynb  pyproject.toml  second_checkpoint.ipynb
.github/: pull_request_template.md
class_files/: second_checkpoint.ipynb
supreme_court_predictions/: __main__.py
supreme_court_predictions/api/: convokit.py
supreme_court_predictions/api/convokit/: client.py
supreme_court_predictions/data/clean_convokit/: README.md
supreme_court_predictions/data/convokit/: README.md
supreme_court_predictions/data/models/: README.md
supreme_court_predictions/data/processed/: README.md
supreme_court_predictions/data/statistics/: DataCleaner.py  README.md  advocates_stats.csv  conversations_stats.csv  descriptive_statistics.xlsx  speakers_stats.csv  testing.ipynb  voters_stats.csv
supreme_court_predictions/models/: logistic.py  logistic_regression.py  model.py  random_forest.py  service.py  simulation.py  xg_boost.py
supreme_court_predictions/processing/: datacleaner.py  featureengineer.py  service.py  token_aggregation.py  tokenizer.py
supreme_court_predictions/statistics/: DataCleaner.py  datacleaner.py  descriptives.py  service.py  testing.ipynb  tokenizer.py
supreme_court_predictions/summary_analysis/: descriptive_statistics.py  descriptives.py  service.py
supreme_court_predictions/util/: constants.py  contants.py  files.py  functions.py
test/: test_util.py
