[tool.poetry]
name = "supreme-court-predictions"
version = "0.1.0"
description = "The capstone project for the CAPP 30254 course at the University of Chicago."
authors = ["michplunkett", "chanteriam", "FedericoDM", "JJModern"]
readme = "README.md"
packages = [{include = "poetry_python_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^2.17.0"
black = "^23.1.0"
requests = "^2.28.2"
pytest = "^7.2.2"
responses = "^0.23.1"
convokit = "^2.5.3"
pandas = "^2.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
