[tool.poetry]
name = "supreme-court-predictions"
version = "0.1.0"
description = "The capstone project for the CAPP 30254 course at the University of Chicago."
authors = ["michplunkett", "chanteriam", "FedericoDM", "JJModern"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
requests = "^2.28.2"
pytest = "^7.2.2"
responses = "^0.23.1"
convokit = "^2.5.3"
pandas = "^2.0.0"
isort = "^5.12.0"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
scikit-learn = "^1.2.2"
scipy = "<1.11.0"
spacy = "^3.5.2"
xgboost = "^1.7.5"
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"
jupyter-contrib-nbextensions = "^0.7.0"
seaborn = "^0.12.2"
ruff = "^0.0.269"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz"

[tool.black]
line-length = 80
lab=false

[tool.isort]
profile= "black"
line_length = 80
skip = [".gitignore", "supreme_court_predictions/data/"]

[tool.ruff]
fix=true
line-length = 80
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
